--- a/src/app/grid/detailed/detailed.component.scss
+++ b/src/app/grid/detailed/detailed.component.scss
@@ -20,7 +20,8 @@
         filter: grayscale(1);
       }
     }
-    .detailed-species-info{
+
+    .detailed-species-info {
       margin-top: -12px;
     }
 
@@ -53,7 +54,7 @@
       background: #dbdbdb;
     }
 
-    .detailed-types{
+    .detailed-types {
       border-top: 14px solid transparent;
     }
 
@@ -85,6 +86,7 @@
     .detailed-label {
       padding: 4px 10px;
       width: 80px;
+      text-align: center;
     }
 
     .inactive {
@@ -106,10 +108,6 @@
 
 .detailed-ability {
   display: flex;
-
-  .detailed-label, .detailed-text {
-    flex-basis: 50%;
-  }
 }
 
 .detailed-dynamax {
