--- a/src/app/grid/detailed/detailed.component.scss
+++ b/src/app/grid/detailed/detailed.component.scss
@@ -12,9 +12,19 @@
     height: auto;
     display: flex;
     box-shadow: 0 3px 5px rgba(0, 0, 0, .4);
+    transition: all .3s;
+
+    &:hover {
+      transform: translateY(-5px);
+      box-shadow: 0 3px 10px 0 rgba(0, 0, 0, 0.4);
+    }
 
     &.inactive {
-      opacity: .5;
+      filter: grayscale(1) opacity(0.5);
+
+      &:hover {
+        filter: grayscale(0) opacity(1);
+      }
 
       .type-badge {
         filter: grayscale(1);
