created grid for valuables

--- a/src/app/valuable/components/valuables/valuables.component.html
+++ b/src/app/valuable/components/valuables/valuables.component.html
@@ -1,1 +1,7 @@
-<p>valuables works!</p>
+<ng-container *ngxAlias="gridAppearance$ | async as gridAppearance">
+    <app-grid *ngIf="worksheet" [appearance]="gridAppearance">
+      <ng-container *ngFor="let entry of worksheet?.data; trackBy: trackBy">
+        <app-grid-item [pokemon]="entry | castValuable"></app-grid-item>
+      </ng-container>
+    </app-grid>
+</ng-container>
