added shininess to sprites in grid

--- a/src/app/grid/detailed/detailed.component.html
+++ b/src/app/grid/detailed/detailed.component.html
@@ -3,7 +3,7 @@
   <div class="detailed-species-info  d-flex">
     <div class="detailed-species-icon">
       <img alt="" class="icon-foundation" src="assets/images/pokesprite-pokeball.svg">
-      <app-pokemon [slug]="pokemon.iconSlug"></app-pokemon>
+      <app-pokemon [shiny]="pokemon.isShiny" [slug]="pokemon.iconSlug"></app-pokemon>
     </div>
     <div class="detailed-pokemon-info row">
       <div class="detailed-types">
