--- a/src/styles.scss
+++ b/src/styles.scss
@@ -24,6 +24,10 @@ body {
   font-size: 1.6rem;
 }
 
+@media (prefers-color-scheme: dark) {
+  body   { background: linear-gradient(55deg,rgba(52, 63, 111, 0.3) 40%,rgba(44, 130, 125, 0.3) 80%),radial-gradient(circle,#353435 14%,#19151b 42%,#031925 80%);  }
+}
+
 ul, ol {
   padding: 0;
   margin: 0;
