switched to official pokesprite css/images

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,6 @@
+@import "../node_modules/pokesprite-spritesheet/assets/pokesprite-pokemon-gen8.css";
+@import "../node_modules/pokesprite-spritesheet/assets/pokesprite-inventory.css";
+
 $gap-size: 2.5rem;
 
 * {
