--- a/src/app/grid/minimal/minimal.component.scss
+++ b/src/app/grid/minimal/minimal.component.scss
@@ -9,7 +9,7 @@
     background: rgba(255, 255, 255, .22);
     border-radius: 5px;
 
-    &.inactive .pkspr {
+    &.inactive .pokesprite {
       filter: grayscale(1) opacity(0.2);
     }
 
