--- a/src/app/breedable/components/index/index.component.html
+++ b/src/app/breedable/components/index/index.component.html
@@ -13,6 +13,7 @@
                        *ngFor="let worksheet of worksheets"
                        [text]="worksheet.title"
                        [meta]="worksheet.ownedEntries +'/'+worksheet.data.length">
+      <app-item category="ball" [slug]="worksheet.title | slugify"></app-item>
     </app-sub-navi-item>
   </ul>
 </aside>
