--- a/src/app/shared/components/sub-navi-item/sub-navi-item.component.html
+++ b/src/app/shared/components/sub-navi-item/sub-navi-item.component.html
@@ -1,6 +1,6 @@
 <li class="{{text | slugify}}">
   <a [routerLink]="link" routerLinkActive="active">
-    <div class="icon"></div>
+    <div class="icon"><ng-content select="app-item, app-pokemon"></ng-content></div>
     <div class="content">
       <span class="title">{{text}}</span>
       <span class="meta-info">{{meta}}</span>
