breedables router link always directs to overview

--- a/src/app/core/components/layout/header/header.component.html
+++ b/src/app/core/components/layout/header/header.component.html
@@ -9,7 +9,7 @@
         <li><a routerLink="/change-spreadsheet">Change Spreadsheet</a></li>
         <li *ngIf="spreadsheetData.hasBreedables">
           <a routerLinkActive="selected"
-             [routerLink]="['/'+ spreadsheetData.id,'breedables', breedablesLink | slugify]">Breedables</a>
+             [routerLink]="['/'+ spreadsheetData.id,'breedables', 'overview']">Breedables</a>
         </li>
         <li *ngIf="spreadsheetData.hasValuables">
           <a routerLinkActive="selected" [routerLink]="['/'+ spreadsheetData.id,'valuables', valuablesLink | slugify]">Valuables</a>
