added base layout to tool component

--- a/src/app/core/components/layout/header/header.component.html
+++ b/src/app/core/components/layout/header/header.component.html
@@ -21,6 +21,10 @@
              'valuables',
              valuablesLink | slugify]">Valuables</a>
         </li>
+        <li >
+          <a routerLinkActive="selected"
+             [routerLink]="['tools']">Tools</a>
+        </li>
       </ul>
     </div>
   </nav>
