--- a/src/app/tools/tools.component.html
+++ b/src/app/tools/tools.component.html
@@ -1,1 +1,12 @@
-<p>tools works!</p>
+<header class="view-header">Tools</header>
+<div class="view-addional-content"></div>
+<aside class="view-sidebar">
+  <ul class="sub-navi">
+    <app-sub-navi-item [link]="['breeding']" [text]="'Breeding'">
+      <app-item category="key-item" slug="oval-charm"></app-item>
+    </app-sub-navi-item>
+  </ul>
+</aside>
+<div class="view-content">
+  <router-outlet></router-outlet>
+</div>
