--- a/src/app/tools/breeding/breeding.component.html
+++ b/src/app/tools/breeding/breeding.component.html
@@ -2,13 +2,14 @@
   <div class="custom-wrapper-example" matAutocompleteOrigin #origin="matAutocompleteOrigin">
     <input
       matInput
-
       [formControl]="control"
       [matAutocomplete]="auto"
       [matAutocompleteConnectedTo]="origin">
   </div>
 
-  <mat-autocomplete #auto="matAutocomplete" [displayWith]="displayFn">
-    <mat-option *ngFor="let option of filteredPokemon | async" [value]="option">{{option.pokemon}}</mat-option>
+  <mat-autocomplete #auto="matAutocomplete" class="poke-autocomplete" [displayWith]="displayFn">
+    <mat-option *ngFor="let option of filteredPokemon | async" [value]="option">
+      <app-pokemon [slug]="option.pokemon | slugify"></app-pokemon>
+      {{option.pokemon}}</mat-option>
   </mat-autocomplete>
 </ng-container>
