--- a/src/app/tools/breeding/breeding.component.html
+++ b/src/app/tools/breeding/breeding.component.html
@@ -6,10 +6,22 @@
       [matAutocomplete]="auto"
       [matAutocompleteConnectedTo]="origin">
   </div>
-
-  <mat-autocomplete #auto="matAutocomplete" class="poke-autocomplete" [displayWith]="displayFn">
+  <mat-autocomplete (optionSelected)="selectPokemon($event)" #auto="matAutocomplete" class="poke-autocomplete"
+                    [displayWith]="displayFn">
     <mat-option *ngFor="let option of filteredPokemon | async" [value]="option">
       <app-pokemon [slug]="option.pokemon | slugify"></app-pokemon>
       {{option.pokemon}}</mat-option>
   </mat-autocomplete>
+  <ng-container *ngIf="selectedPokemon">
+    <ng-container *ngxSubscribe="let pokemon of selectedPokemon">
+      <ng-container *ngIf="pokemon; else pokemonNotFound">
+        {{pokemon.iconSlug}}
+      </ng-container>
+    </ng-container>
+  </ng-container>
 </ng-container>
+
+<ng-template #pokemonNotFound>
+  <app-ball-guy-bubble>The Pokemon you're looking for was not found. The database might not be up date.
+  </app-ball-guy-bubble>
+</ng-template>
