removed global roboto font

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -54,6 +54,7 @@ body, html {
   min-height: 100vh;
   padding: 0;
   margin: 0;
+  height: 100%;
 }
 
 body {
@@ -156,6 +157,3 @@ a {
 .t-align-center{
   text-align: center;
 }
-
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
