--- a/src/app/tools/breeding/breeding.component.html
+++ b/src/app/tools/breeding/breeding.component.html
@@ -28,6 +28,6 @@
 </ng-container>
 
 <ng-template #pokemonNotFound>
-  <app-ball-guy-bubble>The Pokemon you're looking for was not found. The database might not be up date.
+  <app-ball-guy-bubble>The Pokemon you're looking for was not found. The database might not be up to date.
   </app-ball-guy-bubble>
 </ng-template>
