fixed strict errors in header component

--- a/src/app/core/components/layout/header/header.component.html
+++ b/src/app/core/components/layout/header/header.component.html
@@ -14,7 +14,7 @@
              'breedables',
              'overview']">Breedables</a>
         </li>
-        <li *ngIf="spreadsheetData.hasValuables">
+        <li *ngIf="spreadsheetData.hasValuables && valuablesLink">
           <a routerLinkActive="selected"
              [routerLink]="[
              '/'+ (spreadsheetData.username? 'u/'+spreadsheetData.username : spreadsheetData.id),
