--- a/src/app/grid/minimal/minimal.component.html
+++ b/src/app/grid/minimal/minimal.component.html
@@ -1,3 +1,3 @@
-<div class="icon">
+<div class="icon" *ngIf="pokemon">
   <app-pokemon [shiny]="pokemon.isShiny" [slug]="pokemon.iconSlug"></app-pokemon>
 </div>
